# brain

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  install.sh  pyproject.toml
brain/: cli.py  server.py
claude_brain/: cli.py  db.py  embeddings.py  schema.sql  server.py
