[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "sqlite-vec",
    "click",
]

[project.scripts]
brain = "brain.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["brain*"]
